styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.work-sans-font {
  font-family: "Work Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}
/* Shared Class */

.flex{
    display: flex;
}
.background-color{
    background: rgba(255, 144, 14, 0.1);
}
.dark1-color{
    color: #131313;
}
.dark2-color{
    color: #424242;
}
.dark3-color{
    color: #727272;
}
.primary-btn{
    width: 140px;
    height: 40px;
    border-radius: 8px;
    border: none;
    background: rgb(255, 144, 14);
    font-size: 1rem;
    font-weight: 600;
    cursor: pointer;
    color:#FFFFFF ;
}


/* header style */

.header-container{
    justify-content: space-between;
    align-items: center;
    width: 1170px;
    margin: 0 auto;
    padding: 40px 0;
}
.heading-class{
    font-size: 1.8rem;
   font-weight: 700;
}
.list{
    gap: 20px;
}
.list-item{
    list-style: none;
}
.nav-link{
    text-decoration: none;
    font-weight: 500;
    font-size: 1.2rem;
}
.banner-content{
    max-width: 850px;
    text-align: center;
    margin: 0 auto;
    margin-bottom: 10px;
    padding: 30px 0;
}
.image-div{
    justify-content: center;
    align-items: center;
    width: 100%;
}
.banner-img{
    width:1050px;
    height: fit-content;
    margin: 0 auto;
}
.banner-heading{
    font-size: 2.5rem;
    font-weight: 700;
    line-height: auto;
    margin-bottom: 15px;
}
.banner-description{
    font-size: 1rem;
    font-weight: 400;
    line-height: 20px;
    margin-bottom: 15px;
}

/* Add responsiveness for header */


@media screen and (max-width:576px){
    .header-container{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;           
        max-width: 100%;        
        margin: 0 auto;       
        padding: 20px;        
        box-sizing: border-box;
    }
    
    .list {
        flex-direction: column;
    }

    .list-item {
        margin: 5px 0; 
    }
     .banner-content{
        max-width: 300px;
        padding: 20px;
    }
     .banner-img{
        width: 400px;
    }
}
@media screen and (max-width:992px){
    .header-container{
        width: 850px;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-bottom: 5px;
       
    }
    .banner-content{
        max-width: 600px;
    }
    .banner-img{
        max-width: 800px;
    }
    .list{
        margin-top: 30px;
    }
}

/* Features Section style */

.features{
    justify-content: center;
    align-items: center;
    gap: 70px;
    width: 1170px;
    margin-top: 100px;
}

.teams-img{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 10px;
    justify-content: center;
    align-items: center;
    margin-left: 90.7px;
}
.feature-img{
    width: 200px;
    height: 200px;
    border-radius: 8px;
}
.feature-heading {
    font-weight: 700;
    font-size: 2.5rem;
    margin-bottom: 20px;
}
.features-span{
    color: rgb(255, 144, 14);
}
.feature-paragraph{
    font-size: 1rem;
    font-weight: 400;
    margin-bottom: 20px;
}

/* Add responsive for feature section */

@media screen and (max-width:576px){
    .features{
        flex-direction: column;
        width: 100%;
        margin-top: 50px;
    }
    .teams-img{
    display: grid;
    grid-template-columns: repeat(1,1fr);
    gap: 10px;
    margin-left: 0;
    }
    .features-content{
        text-align: center;
        padding: 20px;
    }
    
}  

